--- a/classified.css
+++ b/classified.css
@@ -3,13 +3,14 @@
 .dots text,
 .legend text,
 .metrics.axis text { font: 11px sans-serif; }
+.axis text { font: 11px sans-serif; }
 .metrics.axis path { display: none; }
 .pos {fill-opacity: 0.5;}
 .neg {fill-opacity: 0.05;}
-.tp { fill: #1f77b4; stroke: #1f77b4; stroke-width: 0; }
-.fn { fill: #9467bd; stroke: #9467bd; stroke-width: 0; }
-.tn { fill: #d62728; stroke: #d62728; stroke-width: 0; }
-.fp { fill: #8c564b; stroke: #8c564b; stroke-width: 0; }
+.tp { fill: #1f77b4; stroke: #1f77b4; stroke-width: 1; }
+.fp { fill: #fff; stroke: #31a354; stroke-width: 2; }
+.tn { fill: #31a354; stroke: #31a354; stroke-width: 1; }
+.fn { fill: #fff; stroke: #1f77b4; stroke-width: 2; }
 .legend text { font-size: 12pxbba; font-weight: bold; font-family: sans-serif; }
 .metric .title { font-size: 12px; font-weight: bold; text-anchor: end; font-family: sans-serif; }
 .metric .subtitle { font-size: 10px; fill: #999; text-anchor: end; font-family: sans-serif; }
@@ -20,3 +21,4 @@ rect.mbar { fill: steelblue; }
 .grid text { display: none;}
 .axis line { stroke: #000;}
 .grid path { display: none; }
+.overlay { fill: none; pointer-events: all; }
