Converted stroke size to px.

--- a/classified.css
+++ b/classified.css
@@ -7,10 +7,10 @@
 .metrics.axis path { display: none; }
 .pos {fill-opacity: 0.5;}
 .neg {fill-opacity: 0.05;}
-.tp { fill: #1f77b4; stroke: #1f77b4; stroke-width: 1; }
-.fp { fill: #fff; stroke: #31a354; stroke-width: 2; }
-.tn { fill: #31a354; stroke: #31a354; stroke-width: 1; }
-.fn { fill: #fff; stroke: #1f77b4; stroke-width: 2; }
+.tp { fill: #1f77b4; stroke: #1f77b4; stroke-width: 1px; }
+.fp { fill: #fff; stroke: #31a354; stroke-width: 2px; }
+.tn { fill: #31a354; stroke: #31a354; stroke-width: 1px; }
+.fn { fill: #fff; stroke: #1f77b4; stroke-width: 2px; }
 .legend text { font-size: 12pxbba; font-weight: bold; font-family: sans-serif; }
 .metric .title { font-size: 12px; font-weight: bold; text-anchor: end; font-family: sans-serif; }
 .metric .subtitle { font-size: 10px; fill: #999; text-anchor: end; font-family: sans-serif; }
